// file: proto/gcommon/v1/common/delivery_status.proto
// version: 1.0.1
// guid: 6548d52a-11c5-44c0-bbf8-269fecf8eab3
// file: proto/gcommon/v1/common/delivery_status.proto
//
// Delivery status enumeration for tracking notification outcomes.
edition = "2023";

package common.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb";

// Notification delivery status
enum DeliveryStatus {
  DELIVERY_STATUS_UNSPECIFIED = 0;
  DELIVERY_STATUS_PENDING = 1;
  DELIVERY_STATUS_SENT = 2;
  DELIVERY_STATUS_FAILED = 3;
  DELIVERY_STATUS_ACKNOWLEDGED = 4;
}
