// file: proto/gcommon/v2/common/notification_message.proto
// version: 1.0.0
// guid: 145b3e1e-f6ae-4bbf-9efb-78ebe3c659c8
// file: proto/gcommon/v2/common/notification_message.proto
//
// Message definitions for notification module
edition = "2023";

package common.v2;

import "common/v2/delivery_channel.proto";
import "common/v2/delivery_status.proto";
import "google/protobuf/any.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb/v2";

/**
 * Notification message containing content and delivery details.
 * Supports scheduling, multi-channel delivery, and custom data.
 */
message NotificationMessage {
  // Unique notification identifier
  string id = 1 [
      (buf.validate.field).string.pattern = "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
      (buf.validate.field).required = true
    ];

  // Subject or title of the notification
  string subject = 2;

  // Body text or formatted content
  string body = 3;

  // Structured data payload for templating
  google.protobuf.Any data = 4 [lazy = true];

  // Delivery channels for this notification
  repeated DeliveryChannel channels = 5;

  // Desired send time (defaults to immediate)
  google.protobuf.Timestamp send_at = 6 [lazy = true];

  // Current delivery status
  DeliveryStatus status = 7;

  // Creation timestamp
  google.protobuf.Timestamp created_at = 8 [lazy = true, (buf.validate.field).required = true];
}
